--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "vue-eslint-parser": "^8.3.0"
   }
 }
